# orbital-risk-analysis

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  nixpacks.toml  pyproject.toml  vercel.json
backend/: requirements.txt
backend/app/: data_loader.py  main.py  model.py  schemas.py
backend/app/routes/: analytics.py  objects.py  predict.py
backend/app/services/: prediction.py
data/processed/: features_por_faixa_50km.csv  features_risco_leo.csv  irr_projetado_2024_2035.csv  model_metrics.csv  modelo_rf_irr.pkl  processed_features.parquet
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/glossario/: page.tsx
frontend/app/objects/: page.tsx
frontend/app/predicao/: page.tsx
frontend/components/: SpaceBackground.tsx  providers.tsx
frontend/components/analytics/: CorrelationGrid.tsx  ObjectTypeChart.tsx
frontend/components/dashboard/: AltitudeBarChart.tsx  KpiCards.tsx  RiskHistogram.tsx  RiskPieChart.tsx  RiskScatter.tsx
frontend/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/objects/: ObjectsTable.tsx  RiskBadge.tsx
frontend/components/predicao/: PredictForm.tsx
frontend/components/ui/: api-error.tsx  card.tsx  skeleton.tsx
frontend/hooks/: useAnalytics.ts  useObjects.ts
frontend/lib/: api.ts  chart-styles.ts  i18n.ts  language-context.tsx  types.ts  utils.ts
notebooks/: 01_eda.ipynb  02_features.ipynb  02_features_v2.ipynb  03_model.ipynb  03_modelo_ml.ipynb
src/: data_loader.py
(+1 files in other folders)
