[project]
name = "orbital-risk-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "nbqa>=1.9.1",
    "nbstripout>=0.9.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacetrack>=1.4.0",
]
